--- a/style.css
+++ b/style.css
@@ -1,37 +1,77 @@
-.calculator {
+
+ul{
     display: flex;
-    flex-direction: column;
-    width: 300px;
-    margin: 0 auto;
-    background-color: #f0f0f0;
-    border-radius: 5px;
-    padding: 10px;
+    list-style-type: none;
+}
+.d ul li a{
+    color: #58aff2;
+    font-size: large;
+    transition: color 0.3s ease;
+    font-weight: bolder;
+    text-decoration: none;
+}
+.d ul li a:hover{
+    color: rgb(219,15,141);
+    text-decoration: underline;
+}
+.image-container{
+    border-radius: 50%;
+}
+.d2{
+    margin-left: 190px;
+    border: 30px;
+    font-size: 20px;
+    text-decoration: none;
+    background-color:#58aff2;
+    border-radius: 20px;
+}
+.d3{
+  
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-weight: bold;
+    text-align:justify;
+}
+body{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:#58aff2;
+    background-color: black;
+}
+footer img{
+    width: 150px;
+    height: 100px;
+    color: #000;
+    opacity: 1;
+}
+footer ul{
+    margin-left: 33%;
+}
+footer ul li a{
+    padding-left: 10px;
+    padding-right: 20px;
+}
+footer ul li a i{
+    background-color: black;
+    width: 30px;
+    height: 30px;
+    padding-left: 7px;
+    padding-top: 5px;
+    border-radius: 50%;
+    color: #ffffff;
+}
+footer ul li a i:hover{
+    background-color: rgb(93, 60, 255);
+    color: #000000;
+}
+.footer2{
+    margin-left: 32.5%;
+}
+.footer2 li a{
+    color:#58aff2;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    text-decoration: none;
+    font-size: 20px;
 }
 
-.display {
-    font-size: 24px;
-    padding: 10px;
-    background-color: #e0e0e0;
-    border: none;
-    border-radius: 5px;
-    text-align: right;
-}
-
-.buttons {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 5px;
-    margin-top: 10px;
-}
-
-.buttons button {
-    font-size: 18px;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.buttons button:hover {
-    background-color: #ddd;
-}
